@@ -37,8 +37,6 @@ cjkutils 4.8.3 - checked 11may12
 detex 2.8 - checked 10may12
   http://www.cs.purdue.edu/homes/trinkle/detex/
 
-devnag - from devnag package installed in texmf-dist.
-
 dtl - ?
 
 dvi2tty 5.3.4 - checked 10may12
